Update mysql.md